vchain-account-deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deploy
  labels:
    app: account-service
  annotations:
spec:
  selector:
    matchLabels:
      app: account-service
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: vking34/vchain-account-service:70dee56
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
