vchain-account-deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
    type: NodePort
    selector:
        app: account-service
    ports:
        - port: 8080
          targetPort: 8080
          protocol: TCP
