vchain-account-deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
  name: account-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: account-service
          servicePort: 8080
